# ccfsyncd

./: .gitignore  config.h.in  configure.ac  configure.scan  suppressions.valgrind
extras/: ccfsyncd.conf  exclusions.txt
src/: Makefile.am  ccfsync.h  ccfsyncd.c  cleanup.c  compare_remote.c  copy_and_remove_file.c  curl_helpers.c  daemon.c  delete_file.c  doauth.c  excludes.c  handle_dir_create.c  handle_dir_move.c  init_config.c  list_files_local.c  logging.c  misc.c  monitor_dir.c  signals.c  thread_spawn.c  upload_file.c
